package com.ycorn.patterns.observer.pratices;

/**
 * @author : Jim Wu
 * @version 1.0
 * @function :
 * @since : 2020/5/13 16:17
 */

public interface Observer {

    void update(float temperature, float pressure);

}
